--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -12,7 +12,7 @@
         class="max-w-6xl mx-auto py-2 px-6 xl:px-0 flex items-center justify-between"
       >
         <div class="menu-left flex items-center space-x-6">
-          <a href="#" class="py-4 text-lg text-lg text-purple-500 font-semibold"
+          <a href="/" class="py-4 text-lg text-lg text-purple-500 font-semibold"
             >Home</a
           >
 
